<resources>
    <string name="app_name">Vedi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Direction Inc.</string>
    <string name="nav_header_subtitle">direction.corp@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Most Recent</string>
    <string name="menu_slideshow">Saved Graphs</string>
    <string name="menu_settings">Settings</string>
    <string name="_00_00_00">00 : 00 : 00</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="stop_">Stop</string>
    <string name="start_">Start</string>
    <string name="restart">Restart</string>
    <string name="reset">reset</string>
    <string name="zeromph">0 mph</string>
    <string name="mph">mph</string>
    <string name="most_recent">Most Recent</string>
    <string name="saved_graphs">Saved Graphs</string>
    <!-- Preference Titles -->
    <string name="settings_header">Settings</string>
    <string name="blank"></string>

    <!-- Sync Preferences -->
    <string name="convert_title">Miles / Kilometers</string>
    <string name="convert_key">convert_pref</string>
    <string name="increment_title">Time Intervals</string>
    <string name="increment_key">increment_pref</string>
    <string name="zeroxmph">0 mph</string>
    <string name="max_vel">Max Velocity</string>
    <string name="total_distance">Total Distance</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="velocity">Velocity</string>
    <string name="acceleration">Acceleration</string>
    <string name="diaTitle">Delete Graph</string>
    <string name="diaMessage">Are you sure you want to delete this graph?</string>
    <string name="diaCancel">No</string>
    <string name="diaConfirm">Yes</string>
</resources>