<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/speed"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/txtSpeed2"
        android:layout_width="350dp"
        android:layout_height="180dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/vedi_speedometer"
        android:fontFamily="@font/abeezee"
        android:gravity="bottom|center_horizontal"
        android:paddingBottom="32dp"
        android:text="@string/zeromph"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="275dp"
        android:layout_marginEnd="8dp"
        android:text="@string/_00_00_00"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtMaxVel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_vel"
        app:layout_constraintBottom_toTopOf="@+id/txtTime"
        app:layout_constraintEnd_toEndOf="@+id/txtTime"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/txtTime"
        app:layout_constraintTop_toBottomOf="@+id/txtSpeed2"
        app:layout_constraintVertical_bias="0.376" />

    <TextView
        android:id="@+id/txtDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_distance"
        app:layout_constraintBottom_toTopOf="@+id/txtTime"
        app:layout_constraintEnd_toEndOf="@+id/txtTime"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/txtTime"
        app:layout_constraintTop_toBottomOf="@+id/txtSpeed2"
        app:layout_constraintVertical_bias="0.738" />

    <Button
        android:id="@+id/btnRestart"
        android:layout_width="165dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/vedi_red"
        android:text="@string/reset"
        android:textColor="#000000"
        app:cornerRadius="0dp"
        app:layout_constraintStart_toStartOf="@+id/btnStart"
        app:layout_constraintTop_toBottomOf="@+id/btnStart" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="165dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/vedi_green"
        android:text="@string/start_"
        android:textColor="#000000"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTime" />

</androidx.constraintlayout.widget.ConstraintLayout>