<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="375dp"
    android:layout_height="650dp"
    android:layout_marginHorizontal="32dp"
    android:background="@color/vedi_apricot"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/txtV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="0.5"
        android:fontFamily="@font/abeezee"
        android:gravity="center"
        android:text="@string/velocity"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graphV"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2" />

    <TextView
        android:id="@+id/txtA"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="0.5"
        android:fontFamily="@font/abeezee"
        android:gravity="center"
        android:text="@string/acceleration"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graphA"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2" />

    <LinearLayout
        android:id="@+id/linData"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtDistance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/abeezee"
            android:gravity="center"
            android:text="@string/blank"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtIncrement"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/abeezee"
            android:gravity="center"
            android:text="@string/blank"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imgBack"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/vedi_apricot"
            app:srcCompat="@drawable/baseline_subdirectory_arrow_left_24" />

        <TextView
            android:id="@+id/txtBlank"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/blank" />

        <ImageButton
            android:id="@+id/imgDelete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/vedi_apricot"
            app:srcCompat="@drawable/baseline_delete_forever_24" />

    </LinearLayout>


</LinearLayout>